change api routes, swagger doc
