# routes/api.php
@@ -17,11 +17,11 @@ Route::group(['middleware' => ['json.response']], function () {
 
     Route::middleware('auth:api')->group(function () {
         Route::get('/users', 'Api\ProfileController@index');
-        Route::post('/users/edit', 'Api\ProfileController@update');
+        Route::put('/users', 'Api\ProfileController@update');
 //        Route::delete('/users/delete/{id}', 'Api\ProfileController@delete');
     });
 
-    Route::post('/user/smsverify', 'Api\AuthController@verify');
+    Route::post('/smsverify', 'Api\AuthController@verify');
     Route::post('/login', 'Api\AuthController@login')->name('login.api');
     Route::post('/register', 'Api\AuthController@register')->name('register');
 
